@@ -31,8 +31,6 @@ clojure -A:deps -T:build help/doc"
    "clj-otel-sdk-extension-autoconfigure"
    "clj-otel-sdk-extension-jaeger-remote-sampler"
    "clj-otel-extension-trace-propagators"
-   "clj-otel-exporter-jaeger-grpc"
-   "clj-otel-exporter-jaeger-thrift"
    "clj-otel-exporter-logging"
    "clj-otel-exporter-logging-otlp"
    "clj-otel-exporter-otlp"
