@@ -1,8 +1,0 @@
-;!zprint {:width 140}
-
-{:paths   ["src"]
- :deps    {org.clojure/clojure {:mvn/version "1.11.1"}
-           com.github.steffan-westcott/clj-otel-api {:local/root "../clj-otel-api"}
-           io.opentelemetry/opentelemetry-exporter-jaeger {:mvn/version "1.34.1"}}
- :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.7"}}}
-           :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-api {:mvn/version "0.2.7-SNAPSHOT"}}}}}
