@@ -1,5 +1,0 @@
-;!zprint {:width 140}
-
-{:paths ["src"]
- :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
-         io.opentelemetry/opentelemetry-exporter-jaeger-thrift {:mvn/version "1.34.1"}}}
