@@ -1,26 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.steffan-westcott</groupId>
-  <artifactId>clj-otel-exporter-jaeger-thrift</artifactId>
-  <version>VERSION</version>
-  <name>clj-otel-exporter-jaeger-thrift</name>
-  <description>Provides programmatic configuration using Clojure of OpenTelemetry Jaeger Thrift exporter</description>
-  <url>https://github.com/steffan-westcott/clj-otel</url>
-  <licenses>
-    <license>
-      <name>Apache-2.0</name>
-      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-    </license>
-  </licenses>
-  <developers>
-    <developer>
-      <name>Steffan Westcott</name>
-    </developer>
-  </developers>
-  <scm>
-    <url>https://github.com/steffan-westcott/clj-otel</url>
-    <connection>scm:git:git://github.com/steffan-westcott/clj-otel.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/steffan-westcott/clj-otel.git</developerConnection>
-  </scm>
-</project>
