@@ -26,6 +26,11 @@ WARNING: Until version `1.0.0` there is a greater possibility of breaking change
 
 === `0.2.7` (in progress)
 
+- Bump deps
+* [MAINT] OpenTelemetry `1.35.0`
+** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
+Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
+
 === `0.2.6` (2024-01-15)
 
 - Bump deps
